--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,9 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12-14.21.1.2405"
+    version = "1.12.2-14.23.0.2519"
     runDir = "run"
-    mappings = "snapshot_20170709"
+    mappings = "snapshot_20171003"
     // makeObfSourceJar = false
 }
 
@@ -60,10 +60,10 @@ repositories {
 }
 
 dependencies {
-    deobfCompile "mezz.jei:jei_1.12:4.7.0.68:api"
-    //deobfCompile "MCMultiPart:MCMultiPart:1.3.0:universal"
+    deobfCompile "mezz.jei:jei_1.12.2:4.8.0.110:api"
+    //deobfCompile "MCMultiPart2:MCMultiPart:2.3.4:universal"
 
-    runtime "mezz.jei:jei_1.12:4.7.0.68"
+    runtime "mezz.jei:jei_1.12.2:4.8.0.110"
 }
 
 idea {
