--- a/build.gradle
+++ b/build.gradle
@@ -56,12 +56,12 @@ task apiJar(type: Jar) {
 
 repositories {
     maven { url "http://dvs1.progwml6.com/files/maven" } //JEI
-    //maven { url "http://maven.amadornes.com/" } //MCMP
+    maven { url "http://maven.amadornes.com/" } //MCMP
 }
 
 dependencies {
     compile "mezz.jei:jei_1.12.2:4.8.5.144:api"
-    //deobfCompile "MCMultiPart2:MCMultiPart:2.3.4:universal"
+    deobfCompile "MCMultiPart2:MCMultiPart:2.4.1"
 
     runtime "mezz.jei:jei_1.12.2:4.8.5.144"
 }
