--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ repositories {
 
 dependencies {
     compile "mezz.jei:jei_1.12.2:4.8.5.144:api"
-    deobfCompile "MCMultiPart2:MCMultiPart:2.4.1"
+    compile "MCMultiPart2:MCMultiPart:2.4.1"
 
     runtime "mezz.jei:jei_1.12.2:4.8.5.144"
 }
